simplified tier assignment

--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_scna_tier1.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_scna_tier1.Rmd
@@ -31,7 +31,7 @@ flexdashboard::valueBox(length(unique(pcg_report$content$cna$disp$tier1$SEGMENT)
 ### Diagnostic evidence items
 
 ```{r}
-entries_diagnostic <- NROW(pcg_report$content$cna$clin_eitem$specific_ttype$diagnostic$A_B)
+entries_diagnostic <- NROW(pcg_report$content$cna$clin_eitem$query_ttype$diagnostic$A_B)
 flexdashboard::valueBox(entries_diagnostic, color = ifelse(entries_diagnostic > 0,
                         "#00a65a",
                         pcg_report$metadata$color_none), icon = "fa-file-prescription")
@@ -40,7 +40,7 @@ flexdashboard::valueBox(entries_diagnostic, color = ifelse(entries_diagnostic > 
 ### Prognostic evidence items
 
 ```{r}
-entries_prognostic <- NROW(pcg_report$content$cna$clin_eitem$specific_ttype$prognostic$A_B)
+entries_prognostic <- NROW(pcg_report$content$cna$clin_eitem$query_ttype$prognostic$A_B)
 flexdashboard::valueBox(entries_prognostic, color = ifelse(entries_prognostic > 0,
                         "#00a65a",
                         pcg_report$metadata$color_none), icon = "fa-file-prescription")
@@ -49,7 +49,7 @@ flexdashboard::valueBox(entries_prognostic, color = ifelse(entries_prognostic > 
 ### Predictive evidence items
 
 ```{r}
-entries_predictive <- NROW(pcg_report$content$cna$clin_eitem$specific_ttype$predictive$A_B)
+entries_predictive <- NROW(pcg_report$content$cna$clin_eitem$query_ttype$predictive$A_B)
 flexdashboard::valueBox(entries_predictive, color = ifelse(entries_predictive > 0,
                         "#00a65a",
                         pcg_report$metadata$color_none), icon = "fa-file-prescription")
@@ -69,9 +69,9 @@ Row
 cat('\nEvidence items associated with variants in tier 1 (right panel) can be filtered according to various criteria:\n')
 
 variants_tier1 <- dplyr::bind_rows(
-  pcg_report[['content']][['cna']][['clin_eitem']][['specific_ttype']][['diagnostic']][['A_B']],
-  pcg_report[['content']][['cna']][['clin_eitem']][['specific_ttype']][['predictive']][['A_B']],
-  pcg_report[['content']][['cna']][['clin_eitem']][['specific_ttype']][['prognostic']][['A_B']])
+  pcg_report[['content']][['cna']][['clin_eitem']][['query_ttype']][['diagnostic']][['A_B']],
+  pcg_report[['content']][['cna']][['clin_eitem']][['query_ttype']][['predictive']][['A_B']],
+  pcg_report[['content']][['cna']][['clin_eitem']][['query_ttype']][['prognostic']][['A_B']])
 
 variants_tier1_shared <- crosstalk::SharedData$new(variants_tier1)
 crosstalk::bscols(
